--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <nav class="navbar bg-light">
         <div class="container-fluid">
-            <form class="d-flex gap-2 align-items-center p-3" role="search">
+            <form id="search" class="d-flex gap-2 align-items-center p-3" role="search">
                 <label for="search">Place: </label>
                 <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -41,10 +41,10 @@
             <div class="card-header">
                 Featured
             </div>
-            <ul class="list-group list-group-flush">
+            <ul id='ul1'class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <h3>Degrees</h3>
-                    <figure>img</figure>
+                    <h3 class="deg-insert">Degrees</h3>
+                    <figure class="img-insert">img</figure>
                 </li>
                 <li class="list-group-item">A second item</li>
                 <li class="list-group-item">A third item</li>
@@ -57,7 +57,10 @@
                 Featured
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
+                <li class="list-group-item">
+                    <h3 class="deg-insert"></h3>
+                    <figure class="img-insert"></figure>
+                </li>
                 <li class="list-group-item">
                     <h3>A second item</h3>
                 </li>
@@ -71,7 +74,10 @@
                 Featured
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
+                <li class="list-group-item">
+                    <h3 class="deg-insert"></h3>
+                    <figure class="img-insert"></figure>
+                </li>
                 <li class="list-group-item">A second item</li>
                 <li class="list-group-item">A third item</li>
                 <li class="list-group-item">A forth item</li>
@@ -83,7 +89,10 @@
                 Featured
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
+                <li class="list-group-item">
+                    <h3 class="deg-insert"></h3>
+                    <figure class="img-insert"></figure>
+                </li>
                 <li class="list-group-item">A second item</li>
                 <li class="list-group-item">A third item</li>
                 <li class="list-group-item">A forth item</li>
@@ -95,7 +104,10 @@
                 Featured
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
+                <li class="list-group-item">
+                    <h3 class="deg-insert"></h3>
+                    <figure class="img-insert"></figure>
+                </li>
                 <li class="list-group-item">A second item</li>
                 <li class="list-group-item">A third item</li>
                 <li class="list-group-item">A forth item</li>
@@ -104,7 +116,7 @@
 
     </section>
 
-    <div id='map'></div>
+    <div class="d-flex justify-content-center p-4"><div id='map'></div></div>
 
 
 
