organized the ajax functions

--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
             <div class="card-header">
                 Featured
             </div>
-            <ul id='ul1'class="list-group list-group-flush">
+            <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                     <h3 class="deg-insert">Degrees</h3>
                     <figure class="img-insert">img</figure>
                 </li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="description"></h3>
+                    <h3 class="humidity"></h3>
+                </li>
+                <li class="list-group-item wind">A third item</li>
+                <li class="list-group-item pressure">A forth item</li>
             </ul>
         </div>
 
@@ -58,14 +61,35 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <h3 class="deg-insert"></h3>
-                    <figure class="img-insert"></figure>
+                    <h3 class="deg-insert">Degrees</h3>
+                    <figure class="img-insert">image</figure>
                 </li>
                 <li class="list-group-item">
-                    <h3>A second item</h3>
+                    <h3 class="description"></h3>
+                    <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A forth item</li>
+                <li class="list-group-item wind">A third item</li>
+                <li class="list-group-item pressure">A forth item</li>
+            </ul>
+        </div>
+            </ul>
+        </div>
+        
+        <div class="card weather-info" style="width: 18rem;">
+            <div class="card-header">
+                Featured
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <h3 class="deg-insert">Degrees</h3>
+                    <figure class="img-insert">image</figure>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="description"></h3>
+                    <h3 class="humidity"></h3>
+                </li>
+                <li class="list-group-item wind">A third item</li>
+                <li class="list-group-item pressure">A forth item</li>
             </ul>
         </div>
 
@@ -75,12 +99,15 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <h3 class="deg-insert"></h3>
-                    <figure class="img-insert"></figure>
+                    <h3 class="deg-insert">Degrees</h3>
+                    <figure class="img-insert">image</figure>
                 </li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="description"></h3>
+                    <h3 class="humidity"></h3>
+                </li>
+                <li class="list-group-item wind">A third item</li>
+                <li class="list-group-item pressure">A forth item</li>
             </ul>
         </div>
 
@@ -90,27 +117,15 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <h3 class="deg-insert"></h3>
-                    <figure class="img-insert"></figure>
+                    <h3 class="deg-insert">Degrees</h3>
+                    <figure class="img-insert">image</figure>
                 </li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A forth item</li>
-            </ul>
-        </div>
-
-        <div class="card weather-info" style="width: 18rem;">
-            <div class="card-header">
-                Featured
-            </div>
-            <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <h3 class="deg-insert"></h3>
-                    <figure class="img-insert"></figure>
+                    <h3 class="description"></h3>
+                    <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A forth item</li>
+                <li class="list-group-item wind">A third item</li>
+                <li class="list-group-item pressure">A forth item</li>
             </ul>
         </div>
 
