renamed the ajax functions for read and added ajax data

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="card weather-info" style="width: 18rem;">
             <div class="card-header">
-                Featured
+                time
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -50,14 +50,18 @@
                     <h3 class="description"></h3>
                     <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item wind">A third item</li>
-                <li class="list-group-item pressure">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="wind"></h3>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="pressure"></h3>
+                </li>
             </ul>
         </div>
 
         <div class="card weather-info" style="width: 18rem;">
             <div class="card-header">
-                Featured
+                time
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -68,8 +72,12 @@
                     <h3 class="description"></h3>
                     <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item wind">A third item</li>
-                <li class="list-group-item pressure">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="wind"></h3>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="pressure"></h3>
+                </li>
             </ul>
         </div>
             </ul>
@@ -77,7 +85,7 @@
         
         <div class="card weather-info" style="width: 18rem;">
             <div class="card-header">
-                Featured
+                time
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -88,14 +96,18 @@
                     <h3 class="description"></h3>
                     <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item wind">A third item</li>
-                <li class="list-group-item pressure">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="wind"></h3>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="pressure"></h3>
+                </li>
             </ul>
         </div>
 
         <div class="card weather-info" style="width: 18rem;">
             <div class="card-header">
-                Featured
+                time
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -106,14 +118,18 @@
                     <h3 class="description"></h3>
                     <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item wind">A third item</li>
-                <li class="list-group-item pressure">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="wind"></h3>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="pressure"></h3>
+                </li>
             </ul>
         </div>
 
         <div class="card weather-info" style="width: 18rem;">
             <div class="card-header">
-                Featured
+                time
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -124,8 +140,12 @@
                     <h3 class="description"></h3>
                     <h3 class="humidity"></h3>
                 </li>
-                <li class="list-group-item wind">A third item</li>
-                <li class="list-group-item pressure">A forth item</li>
+                <li class="list-group-item">
+                    <h3 class="wind"></h3>
+                </li>
+                <li class="list-group-item">
+                    <h3 class="pressure"></h3>
+                </li>
             </ul>
         </div>
 
